# budflow

./: .env.azure  .env.example  .env.local  .env.test  .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_GAP_ANALYSIS.md  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_PLAN.md  PARTIAL_EXECUTION_GAP_ANALYSIS.md  README.md  alembic.ini  demo_budflow.py  demo_workflow_composition.py  execution.md  execution2.md  pyproject.toml  run_budflow.py  scratchpad.md  to_be_implemented.md
alembic/: env.py
alembic/versions/: 9ff98210e361_initial_migration.py  ad85666e6fad_add_workflow_models.py  b3d643bccdad_add_authentication_models.py  c4d5e6f7a8b9_add_missing_workflow_execution_fields.py  d5e6f7a8b9c1_add_credentials_tables.py  e6f7a8b9c1d2_add_job_id_to_workflow_execution.py
budflow/: __init__.py  cli.py  config.py  database.py  database_deps.py  exceptions.py  main.py  metrics.py  server.py  worker.py
budflow/ai/: __init__.py  chains.py  embeddings.py  providers.py
budflow/auth/: dependencies.py  models.py  routes.py  schemas.py  security.py  service.py
budflow/collaboration/: __init__.py  realtime.py
budflow/core/: __init__.py  binary_data_v2.py  multi_main.py  recovery.py  redis_client.py
budflow/core/binary_data/: __init__.py  filesystem.py  manager.py  s3.py
budflow/core/expression_engine/: __init__.py
budflow/core/multi_main/: __init__.py
budflow/core/oauth2_flow/: __init__.py
budflow/credentials/: __init__.py  encryption.py  exceptions.py  models.py  routes.py  schemas.py  service.py
budflow/executions/: __init__.py  exceptions.py  partial.py  pause_resume.py  pin_data.py  realtime_progress.py  routes.py  schemas.py  service.py  subworkflow.py
budflow/executor/: __init__.py  context.py  data.py  directed_graph.py  engine.py  errors.py  runner.py
budflow/executor/expression_engine/: __init__.py  context.py  engine.py  (+5 more)
budflow/history/: __init__.py  version_control.py
budflow/integrations/: tasks.py
budflow/mcp/: __init__.py  client.py  routes.py  server.py  types.py
budflow/monitoring/: __init__.py  insights.py
budflow/nodes/: __init__.py  actions.py  base.py  control.py  dependencies.py  expression.py  registry.py  routes.py  schemas.py  triggers.py
budflow/projects/: __init__.py  models.py
budflow/queue/: __init__.py  config.py  exceptions.py  manager.py  metrics.py  models.py  recovery.py  tasks.py  worker.py
budflow/security/: __init__.py  external_secrets.py
budflow/templates/: __init__.py  manager.py
budflow/utils/: rate_limit.py
budflow/webhooks/: __init__.py  cache.py  exceptions.py  models.py  processor.py  rate_limiter.py  registry.py  routes.py  service.py
budflow/workflows/: __init__.py  composition.py  exceptions.py  models.py  routes.py  schemas.py  service.py  tasks.py  tasks_old.py
tests/: conftest.py  test_ai_providers.py  test_auth.py  test_binary_data.py  test_code_node.py  test_collaboration.py  test_config.py  test_core_nodes.py  test_credential_encryption.py  test_credentials_api.py  test_database.py  test_directed_graph_execution.py  test_executions_api.py  test_executor.py  test_expression_engine.py  test_external_secrets.py  test_json_node.py  test_main.py  test_mcp.py  test_monitoring.py  test_multi_main.py  test_node_registry.py  test_nodes.py  test_oauth2_flow.py  test_packages.py  test_parallel_execution.py  test_partial_execution.py  test_pause_resume.py  test_pin_data.py  test_queue.py  test_realtime_monitoring.py  test_realtime_progress.py  test_recovery.py  test_subworkflow.py  test_task_runner.py  test_templates.py  test_webhook_processor.py  test_webhook_routes.py  test_webhooks.py  test_workflow_composition.py  (+4 more)
(+21 files in other folders)
